Fixed bug at reservation creation on /reservations endpoint consumption